Moved shouldPersonBeIncluded to PersonHandler. Made Person constructor protected. Changed so that PersonHandler now creates the persons instead of just adding them. Changed tests based on those changes.

--- a/doc/statistics.bib
+++ b/doc/statistics.bib
@@ -314,11 +314,10 @@ eprint = {http://www.worldscientific.com/doi/pdf/10.1142/S0217751X13400216}
 
 @article{causal_bounds_arvid,
   title={Bounds on causal interactions for binary outcomes},
-  author={Arvid Sj{\"o}lander and Lee, W and Henrik K{\"a}llberg and Pawitan,Y},
+  author={Sj{\"o}lander, A and Lee, W and K{\"a}llberg, H and Pawitan, Y},
   journal={Biometrics},
-  volume={X},
-  number={X},
-  year={2014}
+  year={2014},
+  publisher={Wiley Online Library}
 }
 
 @misc{gwis_conf,
