--- a/doc/CuEira_report.tex
+++ b/doc/CuEira_report.tex
@@ -94,54 +94,50 @@ These type of studies are usually either cohort or case-control. In cohort studi
 \\
 The genetic markers are commonly single-nucleotide polymorphisms(SNPs). SNPs are variations in the genome where a single nucleotide is different between individuals in a population\cite{fareed_snp}. Environmental factors can be various things such as smoking, physical activity and so on. The amount of data to handle usually consists of thousands individuals and hundred thousands or millions of SNPs. Due to the high number of SNPs few algorithms are capable to investigate more than second order interaction in a reasonable time. There are some algorithms that can handle higher interaction orders however these have drawbacks\cite{gwis,high_order_2012,fast_high_order_cluster}.
 
-%\subsection{High Performance Computing}
-%High Performance Computing(HPC) is a branch of computer science that focuses on developing supercomputers and related software. Since they are parallel a big area is how to parallelize various algorithms. In HPC groups of computers called \emph{clusters} are used.\cite{intro_hpc, introduction_hpc_hager}\\
-%\\
-%Moores Law, more threads, increased need for parallelization
-%Plot of speed without increased number of cores and with\\
-%\\
-%However HPC is more than just flops/sec, especially since other parts of the computers aren't improving as fast as the computing power. Few applications today is even near peak performance due to various latency and bandwidth problems.
-
 \section{Defining Interaction}
-There are several ways to define interaction. The overall goal is usually to find if \emph{biological} interactions are present. Biological interaction is when the factors co-operate through a physiological or biological mechanism and causes the effect, eg. disease. This information can be used to explain the mechanisms involved in causing the disease and possibly help to find cures for them. However biological interaction is not well defined and thus it is not possible to calculate it directly from data.\cite{rothman1998modern,rothman2002intro_epidemiology}\\
+There are several ways to define interaction. The overall goal is usually to find if \emph{biological} interactions are present. \emph{Biological} interaction is when the factors co-operate through a physiological or biological mechanism and causes the effect, eg. disease. This information can be used to explain the mechanisms involved in causing the disease and possibly help to find cures for them. However biological interaction is not well defined and thus it is not possible to calculate it directly from data.\cite{rothman1998modern,rothman2002intro_epidemiology}\\
 \\
 \emph{Statistic} interaction on the other hand is well defined. However it is scale dependent, ie. interactions can appear and disappear based on transformations of the data. Statistic interaction also depends on the used model. The common way to define statistic interaction is to consider the presence of a product term between the variables in the statistical model, this is referred to as \emph{multiplicative} interaction. For instance for a linear model
-$$f(x,y)=ax+by+cxy+d$$
+\begin{equation}
+f(x,y)=ax+by+cxy+d
+\end{equation}
 c is the product term that represents multiplicative interaction between variables x and y. Statistic interaction is often called just interaction which can make it a bit confusing.\cite{geira,rothman1998modern}\\
 \\
 It can also be defined as the divergence from additive effects on a logarithmic scale, eg
-$$OR_{both\;factors\;present}>OR_{first\;factor\;present}+OR_{second\;factor\;present}-1$$
-More about odds ratios(OR) in the section about logistic regression. It's called biological interaction by Rothman\cite{rothman1998modern}, sometimes \emph{additive} interaction\cite{geira} or \emph{causual interdependence}\cite{greenland1988invariants} is used. In this work we will use the term \emph{causal} interaction as in \cite{causal_bounds_arvid}.\\
+\begin{equation}
+OR_{both\:factors\:present}>OR_{first\:factor\:present}+OR_{second\:factor\:present}-1
+\end{equation}
+It's called biological interaction by Rothman\cite{rothman1998modern}, sometimes \emph{additive} interaction\cite{geira} or \emph{causual interdependence}\cite{greenland1988invariants} is used. In this work we will use the term \emph{causal} interaction as in \cite{causal_bounds_arvid}. More about odds ratios(OR) in the section about logistic regression.\\
 
 \section{GEIRA and JEIRA}
-GEIRA is a tool for analyzing gene-gene and gene-environment interaction. It uses logistic regression and causal interaction\cite{geira}. JEIRA is a parallelized implementation of the environmental interaction analysis in GEIRA. However it can only be run on one node.
+\emph{GEIRA}is a tool for analysing gene-gene and gene-environment interaction. It uses logistic regression and causal interaction\cite{geira}. \emph{JEIRA} is a parallelized implementation of the environmental interaction analysis in GEIRA. However it can only be run on one node.
 
 \clearpage
 \chapter{Background}
 %TODO
 
-Most research have focused on gene-gene interaction so there are few tools for gene-environment.
+Most of the conducted research in GWAS has been focused on gene-gene interactions. Few studies and tools have been investigating gene-environment interactions.
 
 Both CPU clusters\cite{biforce} and GPUs\cite{gwis,gboost,gmdr_gpu,cuda_lr,genie_2012,plink_gpu}, in some cases GPU clusters\cite{gwis_conf} have been used for GWAS. GPUs have been a popular choice since most of the methods for searching for interaction are good on GPUs because each combination can usually be considered independently from the others. More about this in section \ref{gpu_gwas}
 
 
 \section{Mathematical Background}
-SNPs are commonly binary variables with either dominant or recessive models. Dominant is when there has to be at least one of the allele have the trait to get the effect. Recessive is when there has to be both alleles. The case where the risk is present is coded as 1 and absence is coded as 0. Co-dominant model can also be used and in that case when both alleles have the risk factor is coded as 2, when only one is present is coded as 1 and absence is 0 as before. That SNPs can be viewed as binary is an advantage that is almost always used when searching for gene-gene interaction.\\
+There are a lot of algorithms and programs proposed for searching for interaction, most have focused on gene-gene interaction as already mentioned. They can be roughly classified into four categories, exhaustive, stochastic, machine learning/data mining and stepwise\cite{fast_high_order_cluster}\\
+\\
+SNPs are commonly binary variables with either dominant or recessive models. Dominant is when a person only has to have one allele affected to get the trait. Recessive is when both have to be ?. The case where the risk is present is coded as 1 and absence is coded as 0. Co-dominant model can also be used and in that case when both alleles have the risk factor is coded as 2, when only one is present is coded as 1 and absence is 0 as before. That SNPs can be viewed as binary is an advantage that is almost always used when searching for gene-gene interaction.\\
 \\
 Environmental factors can be of any type\cite{gene_enviroment_2013}. Gene-gene interaction tools can sometimes be used to find gene-environment interaction, however they usually require the variable to be binary or have other problems since they weren't designed for environmental interaction.\cite{gene_enviroment_2013}\\
 \\
-There are a lot of algorithms and programs proposed for searching for interaction, most have focused on gene-gene interaction as already mentioned. They can be roughly classified into four categories, exhaustive, stochastic, machine learning/data mining and stepwise\cite{fast_high_order_cluster}\\
+\emph{Exhaustive search} is the most direct approach, it compares all combinations of the SNPs in the data. Exhaustive search methods will not miss a signficant combination because it didn't considere it however it also means that they can bee slow. Multifactor-Dimensionality Reduction(MDR)\cite{mdr_2001} and BOOST\cite{boost_gene_gene} are two examples of this type of algorithm.\\
 \\
-Exhaustive search is the most direct approach, they compare all combinations of the SNPs in the data. They do not risk missing a combination but it also means they can be slow. Multifactor-Dimensionality Reduction(MDR)\cite{mdr_2001} and BOOST\cite{boost_gene_gene} are two examples.\\
+\emph{Stochastic} methods uses random sampling to ``walk'' through the data. BEAM\cite{beam_2007} is one example and it uses Markov Chain Monte Carlo(MCMC) method.\\
 \\
-Stochastic methods uses random sampling to ``walk'' through the data. BEAM\cite{beam_2007} is one example and it uses Markov Chain Monte Carlo(MCMC).\\
+\emph{Data Mining} and \emph{Machine Learning} are methods that learn from data and tries to generalize it. MDR\cite{mdr_2001} is a type of data mining method and is among the most common methods used in GWAS. See section \ref{data_machine_learning} for more details.\\
 \\
-Data Mining and Machine Learning are methods that learn from data and tries to generalize it. MDR\cite{mdr_2001} a data mining method and is the among the most common methods used in GWAS. See section \ref{data_machine_learning} for more details.\\
-\\
-Stepwise approaches uses a filtering stage and a search stage. At the filtering stage uninteresting combinations are filtered out by using some exhaustive method. The other SNPs are the examined more carefully in the search stage. BOOST\cite{boost_gene_gene} is an example which uses clever data structures and a likelihood ratio test to filter the data before applying log-linear models.
+\emph{Stepwise} methods uses a filtering stage and a search stage. At the filtering stage uninteresting combinations are filtered out by using some exhaustive method. The other SNPs are the examined more carefully in the search stage. BOOST\cite{boost_gene_gene} is an example which uses clever data structures and a likelihood ratio test to filter the data before applying log-linear models.
 
 \subsection{Confounders and Covariates}
-Confounding is one of the central issues in the design of epidemiological studies. It's when the effect of the exposure is mixed with the effect of another variable. So if we do not measure the second variable the first effect would be estimated as stronger than it really is. The second variable is then a \emph{confounder}. Several methods in epidemiology are about avoiding or adjusting for confounding. Sometimes these variables needs to be incorporated into the models. Covariates are possible confounders or other variables that you want to adjust for in the model. Sometimes covariates are called control variables.\cite{rothman2002intro_epidemiology,rothman1998modern}
+\emph{Confounding} is one of the central issues in the design of epidemiological studies. It is when the effect of the exposure is mixed with the effect of another variable. So if we do not measure the second variable the first effect would be estimated as stronger than it really is. The second variable is then a \emph{confounder}. Several methods in epidemiology are about avoiding or adjusting for confounding. Sometimes these variables needs to be incorporated into the models. \emph{Covariates} are possible confounders or other variables that one wants to adjust for in the model. Sometimes covariates are called \emph{control variables}.\cite{rothman2002intro_epidemiology,rothman1998modern}
 
 \begin{figure}[h]
     \centering
@@ -151,12 +147,12 @@ Confounding is one of the central issues in the design of epidemiological studie
 \end{figure}
 
 \subsection{The Multiple Testing Problem}
-It's not uncommon to test a lot of hypothesis on the same data and in the case of GWAS it can be billions of tests. If we continue testing we should eventually find something that is significant. Also remember that the standard p-value of 5\% means that we expect to find 1 in 20 false positives under the assumption that the null hypothesis is true. The problem arise from the fact that the hypothesis tests are dependent on each other since they use parts of the same data.. This is the multiple testing problem and if it is not corrected for we might find a lot of false positives.\cite{bonferroni_multiple}\\
+It is not uncommon to test a lot of hypothesis on the same data and in the case of GWAS it can be billions of tests. If one continues to test one should eventually find something that is significant. Also it is important to remember that the standard p-value of 5\% means that we expect to find 1 in 20 false positives under the assumption that the null hypothesis is true. The problem arises from the fact that the hypothesis tests are dependent on each other since they use parts of the same data. This is the multiple testing problem and if it is not corrected for one might find a lot of false positives.\cite{bonferroni_multiple}\\
 \\
-Bonferroni correction is the simplest and viewed as the most conservative way to correct for this problem, simply divided the p-value threshold that a tests passes with the number of hypothesis. However how many hypothesis that are made isn't always obvious. For instance for a two stage analysis. Is the number of hypothesis the number of tests done in both stages combined, the number made in the first stage or the second stage?\cite{bonferroni_multiple}
+Bonferroni correction is the simplest and viewed as the most conservative way to correct for this problem. It simply divides the p-value threshold that a test passes by the number of hypothesis. However the number of hypothesis made is not always clear. With a two-stage analysis, is the number of hypothesis the number of tests done in both stages combined, the number made in the first stage or the second stage?\cite{bonferroni_multiple}
 
 \subsection{Contingency Tables}
-A contingency table is a matrix used to describe categorical data. Each cell contains the frequency of occurrences with a specific combination of variables. Table \ref{table:contingency_table} is an example of an 2 x 3 table. From it we can for instance see that 171 persons that got the placebo had an nonfatal attack. Contingency tables are the basis for various statistical tests to model the data. Contingency tables can be used directly for tests like $chi^2$.\cite{agresti_categorical}
+A contingency table is a matrix used to describe categorical data. Each cell contains the frequency of occurrences with a specific combination of variables. Table \ref{table:contingency_table} is an example of an 2 x 3 table. From this table we can for instance see that 171 persons that got the placebo had a nonfatal attack. Contingency tables are the basis for various statistical tests to model the data. Contingency tables can be used directly for tests like $chi^2$.\cite{agresti_categorical}
 
 \begin{table}[h]
 \begin{tabular}{ l c c c }
@@ -171,21 +167,68 @@ A contingency table is a matrix used to describe categorical data. Each cell con
 \label{table:contingency_table}
 \end{table}
 
-\subsubsection{Logisitic Regression}
-For logistic regression the cells of the table are Binomial distributed.\cite{agresti_categorical}
+\subsection{Logisitic Regression}
+One way to model the contigency tables is by using logistic regression. Logistic regression is a type of linear regression model for classification that models a latent probability for the outcomes. The outcomes are commonly considred binary however it can be extended to multiple outcomes. In this work we will only consider them as binary. Logistic regression transforms the probability by using the \emph{logit} transformation. The logit transformation with probability \emph{p} is 
+
+\begin{equation}
+log(\frac{p}{1-p})
+\end{equation}
+
+%picture of logit transformation graph
+
+The probability with a set of predictor variables \emph{X} is $\pi(X)=P(Y=1)$. The linear regression model with n predictors $X=(x_1,x_2,....,x_n)$ and by using the logit transformation is then
+\begin{equation}
+logit[\pi(X)]=\alpha+\beta_1 x_1+\beta_2 x_2+...+\beta_n x_n
+\end{equation}
+
+If move the logit to the right side we get the moddelling of the probability
+\begin{equation}
+\pi(X)=\frac{exp(\alpha+\beta_1 x_1+\beta_2 x_2+...+\beta_n x_n)}{1+exp(\alpha+\beta_1 x_1+\beta_2 x_2+...+\beta_n x_n}
+\end{equation}
+
+
+Drawback of LR for interaction
+Assumes independecen between SNPs(doesn't considere the LD structure)
+Slow
 
 \subsubsection{Weighted Logistic Regression}
-Each individual is assigned a weight that can be any positive number. It's then used to weight the logistic regression.
+%TODO
+Each individual is assigned a weight that can be ?. It is then used to weight the logistic regression.
 
-\subsubsection{Statistic Measures}
-Relative risk and odds ratio\cite{agresti_categorical}
+\subsection{Statistic Measures}
+OR
 
-relative risk due to interaction
+Relative risk(RR)
+\begin{equation}
+RR=\frac{p_{event\:when\:exposed}}{p_{event\:when\:not\:exposed}}
+\end{equation}
 
-AP
+RR can not be esitmaded in case control since it requires prevalence in whole population. Fine in cohort. In case control it is approximate with OR.
 
-Causal bonds\cite{causal_bounds_arvid}
+Relative risk due to interaction(RERI) is
+\begin{equation}
+RERI=RR_{11}-RR_{10}-RR_{01}+1
+\end{equation}
+%cite rothman? chapter 15
 
+Attributable proportion due to interaction(AP)
+\begin{equation}
+AP=\frac{RERI}{RR_{11}}=\frac{1}{RR_{11}}-\frac{RR_{10}}{RR_{11}}-\frac{RR_{01}}{RR_{11}}+1
+\end{equation}
+
+Synergy index(SI)
+\begin{equation}
+\frac{RR_{11}-1}{RR_{10}+RR_{01}-2}
+\end{equation}
+
+SI is simpler to investigate on the log scale
+\begin{equation}
+ln(SI)=ln(RR_{11}-1)-ln(RR_{10}+RR_{01}-2)
+\end{equation}
+
+Lack of interaction shows in the values by
+AP=0
+SI=1
 %\section{Algorithmic Background}
 \subsection{Fitting Logisitic Regression Models}
 %TODO
@@ -193,14 +236,14 @@ Done with maximum likelihood(ML), often via Newtons method.
 
 \subsection{Data Mining and Machine Learning Approaches}
 \label{data_machine_learning}
-Approaches based on Data Mining and Machine Learning have been a popular choice for GWAS. Multifactor-Dimensionality Reduction(MDR)\cite{mdr_2001} and Random Forest(RF)\cite{random_forest} are among the most common\cite{gene_enviroment_2013,cordell_detect_review}. There are others as well such as clustering approaches \cite{fast_high_order_cluster}. Most of them are used for screening the data for possible interactions\cite{gene_enviroment_2013,cordell_detect_review}.\\
+Approaches based on Data Mining and Machine Learning have been a popular choice for GWAS. Multifactor-Dimensionality Reduction(MDR)\cite{mdr_2001} and Random Forest(RF)\cite{random_forest} are among the most common ones\cite{gene_enviroment_2013,cordell_detect_review}. There are other methods as well such as clustering approaches \cite{fast_high_order_cluster}. Most of them are used for screening the data for possible interactions\cite{gene_enviroment_2013,cordell_detect_review}.\\
 \\
-Their biggest advantage is that they are usually nonparametric and designed with high dimensional data in mind. However they are prone to overfitting and the usual way to try to prevent that is to use cross validation and sometimes permutation tests. That means that even if the method itself is fast it is repeated so many times that it can be slow in the end.\cite{cordell_detect_review}
+Their biggest advantage is that they are usually nonparametric and designed with high dimensional data in mind. However they are prone to overfitting and the usual way to try to prevent that is to use cross validation and sometimes permutation tests. It means that even if the method itself is fast it is repeated so many times that the whole algorithm can be slow in the end.\cite{cordell_detect_review}
 
 \subsubsection{Multifactor-Dimensionality Reduction}
-Multifactor-Dimensionality Reduction(MDR) is a method that reduces the number of dimensions by combining several dimensions into one. For GWAS it combines a number of variables from all the variable combinations and its new dimension is then compared against the outcome and if its predictability is high then the variables that were combined are considered to interact with each other. It goes through all possible combinations of the desired rank like that. It combines the selected n variables by calculating the ratio of cases versus controls for each combination of the possible values of the variables. If the ratio is above a certain threshold all the members of that groups is gets the value 1 for the new dimension, otherwise 0. However due to the cross validation permutation tests it can be slow however it is still faster than exhaustive search with regression methods.\cite{cordell_detect_review,mdr_2001}\\
+Multifactor-Dimensionality Reduction(MDR) is a method that reduces the number of dimensions by combining several dimensions into one. For GWAS it combines a number of variables from all the variable combinations and its new dimension is then compared against the outcome. If its predictability is high then the variables that were combined are considered to interact with each other. MDR repeates the process on all combinations of variables. It combines the selected n variables by calculating the ratio of cases versus controls for each combination of the possible values of the variables. If the ratio is above a certain threshold all the members of that groups is gets the value 1 for the new dimension, otherwise 0. However due to the cross validation and permutation tests this method can be slow. On the other hand it is still faster than exhaustive search with regression methods.\cite{cordell_detect_review,mdr_2001}\\
 \\
-An simple example of MDR using exclusive or(XOR). It's an logical operator that is true if one and only one of it is two variables is true. We have 4 possible combinations and an occurrence for each. The combination (1,0) and (0,1) both have one case with outcome 1 so MDR will classify them as 1 in the new variable Z. The other two combinations have outcome 0 so will be classified with Z=0. And then it is easy to make an predictor from Z to Y.
+An simple example of MDR using exclusive or(XOR). XOR is an logical operator that is true if one and only one of its two variables is true. We have 4 possible combinations and an occurrence for each of them. The combination (1,0) and (0,1) both have one case with outcome 1 so MDR will classify them as 1 in the new variable Z. The other two combinations have outcome 0 so will be classified with Z=0. From here it is easy to make an predictor from Z to the outcome Y by comparining the values.
 
 \begin{table}[h]
 \begin{tabular}{ | c | c | c | }
@@ -237,22 +280,22 @@ An simple example of MDR using exclusive or(XOR). It's an logical operator that 
 \label{table:xor_mdr_table}
 \end{table}
 
-It can been used for gene-environment interaction but requires modifications since MDR can only handle binary variables. There are extensions that can use continues variables, however they are regression based so they will be slower than regular MDR.\cite{gene_enviroment_2013}
+MDR can been used for gene-environment interaction but requires modifications since MDR can only handle binary variables. There are extensions that can use continues variables, however these are regression based so these will be slower than regular MDR.\cite{gene_enviroment_2013}
 
 \subsubsection{Random Forest}
-Random Forest(RF) is an ensemble learning method, ensemble methods combine multiple models to improve performance. It takes randomized samples of the data and builds decision trees on each of them. The trees are then combined to form the classifier. Usually hundreds or thousands of trees are used depending on the problem\cite{random_forest}. One of the most popular variants of Random Forest for GWAS is Random Jungle\cite{random_jungle}.\\
+Random Forest(RF) is an ensemble learning method. Ensemble methods combine multiple models to improve performance. RF takes randomized samples of the data and builds decision trees on each of them. These trees are then combined to form the classifier. Usually hundreds or thousands of trees are used depending on the problem\cite{random_forest}. One of the most popular variants of Random Forest for GWAS is Random Jungle\cite{random_jungle}.\\
 \\
-It has been shown in high dimensional data that it tends to only rank interacting factors high if they have strong marginal effects\cite{winham_rf_2012}. Also the ranking of the variables does not say which factor it is interacting with either since it is based on the joint distributions\cite{gene_enviroment_2013}. How to incorporate the environmental factors in RF is also not obvious and using variables with very different scales can bias RFs results\cite{gene_enviroment_2013}.
+It has been shown in high dimensional data that RF tends to only rank interacting factors high if they have strong marginal effects\cite{winham_rf_2012}. Also the ranking of the variables does not indicate which factor it is interacting with either since it is based on the joint distributions\cite{gene_enviroment_2013}. How to incorporate the environmental factors in RF is also not obvious and using variables with very different scales can bias RFs results\cite{gene_enviroment_2013}.
 
 Decision tree figure here
 
-\subsection{Coding the interaction varible}
+\subsection{Coding the interaction variable}
 %TODO
 bit of a problem in some ways
 easy with dominat or recessive
 absence of either is 0, having both is 1.
 
-co-dominant, absence of either is 0 as before. having both 2 is clearly worse than eitheer 1,2 or 2,1
+co-dominant, absence of either is 0 as before. having both 2 is clearly worse than either 1,2 or 2,1
 but which is worse of 1,2 and 2,1? they clearly are not the same so has to be coded differently.
 
 it gets worse with categorical and continues variables
@@ -267,23 +310,23 @@ An important part in making fast and efficient programs is to know how fast the 
 \\
 There are two ways to measure how long a program takes to execute. Execution time, sometimes called wall clock time, is how long real life time the program took. The other is to measure the number of processor cycles spent. A parallel program will have shorter execution time than it is serial version however it will likely have spent more processor cycles due to overhead from communication and initialization of the threads. We are usually interested in execution time however number of cycles can be useful for comparison of algorithms.\\
 \\
-Speedup is measures how much faster then program is with a certain number of threads compared to the serial version. It's defined as
+speed up is measures how much faster then program is with a certain number of threads compared to the serial version. It's defined as
 $$S(p)=\frac{T(1)}{T(p)}$$
-Where $T(1)$ is execution time of serial program and $T(p)$ is execution time of parallel program with p threads. Linear speedup is when S(p)=p, it is sometimes called perfect speedup.\\
+Where $T(1)$ is execution time of serial program and $T(p)$ is execution time of parallel program with p threads. Linear speed up is when S(p)=p, it is sometimes called perfect speed up.\\
 \\
 Efficieny reflects how efficient the program is using p threads. Linear speed has efficency 1. It's defined as
 $$E(p)=\frac{S(p)}{p}=\frac{T(1)}{pT(p)}$$
 \\
-Strong scaling refers to how the program handles a fixed problem size and increased number of processors. An program with strong scaling has linear speedup. Weak scaling refers to the execution time of the program when there is a fixed problem size \emph{per processor} and the number of processors is increased.\cite{cuda_best_practice}\\
+Strong scaling refers to how the program handles a fixed problem size and increased number of processors. An program with strong scaling has linear speed up. Weak scaling refers to the execution time of the program when there is a fixed problem size \emph{per processor} and the number of processors is increased.\cite{cuda_best_practice}\\
 \\
 It can be a good idea to plot these measures while varying p, this can show when bottlnecks occur. Looking at the measures at node level can also be useful to get an idea of how increased number of nodes and therefore increased communication affects the performance.
 
 \subsubsection{Amdahl's Law and Gustafson's Law}
-Amdahl's Law is used to find the expected speed up of a system when parts of is parallelized. Simply it says that as the number of processors increases the parts that aren't parallelized will start taking up more and more of the wall clock time and that the speedup for adding more processors will decrease as more and more processors are added and more time is spent relatively on the non parallelized part. It's closely related to strong scaling.\cite{cuda_best_practice,2010_reevaluating_amdahl}\\
+Amdahl's Law is used to find the expected speed up of a system when parts of is parallelized. Simply it says that as the number of processors increases the parts that aren't parallelized will start taking up more and more of the wall clock time and that the speed up for adding more processors will decrease as more and more processors are added and more time is spent relatively on the non parallelized part. It's closely related to strong scaling.\cite{cuda_best_practice,2010_reevaluating_amdahl}\\
 \\
-It says that the expected speedup with F fraction of the code parallelized and p threads is 
+It says that the expected speed up with F fraction of the code parallelized and p threads is 
 $$S(p)=\frac{1}{(1-F)+\frac{F}{p}(1-F)}$$
-As the number of threads grow towards infinity $S(p)$ converges on $\frac{1}{1-F}$. If we have 90\% of a code parallelized then even with infinite number of threads we won't get a better speedup than ten.\cite{2010_reevaluating_amdahl}
+As the number of threads grow towards infinity $S(p)$ converges on $\frac{1}{1-F}$. If we have 90\% of a code parallelized then even with infinite number of threads we won't get a better speed up than ten.\cite{2010_reevaluating_amdahl}
 
 \begin{figure}[h]
     \centering
@@ -296,7 +339,7 @@ There are limitation to Amdahl's Law since it makes a couple of assumptions.
 
 \begin{itemize}
   \item The number of executing threads remain constant over the course of the program.
-  \item The parallel portion has perfect speedup. Often not true due to shared resources,eg caches, memory bandwidth, and shared data.
+  \item The parallel portion has perfect speed up. Often not true due to shared resources,eg caches, memory bandwidth, and shared data.
   \item The parallel portion has infinite scaling, not true due to similar limits as above. More threads will not increase performance after a while or might even decrease it.
   \item There is no overhead for creation and destruction of threads.
   \item The length of the serial portion is independent of the number of threads. Often the serial work is to divided the work to the threads, this work will obviously increase as the number of threads go up. More threads can also lead to more communication overhead.
@@ -305,7 +348,7 @@ There are limitation to Amdahl's Law since it makes a couple of assumptions.
 
 This means it is most accurate with programs that are of the fork-join type. Eg serial parts and then matrix operations.\\
 \\
-Gustafson's Law is closely related to Amdahl's Law and can in some ways be more accurate than Amdahl's Law. Gustafson's Law makes similar assumptions as Amdahl's Law however it also makes two additional statements. It states that problems tends to expand when provided with more computational power, eg increased precision by reducing grid size, high frame rate for graphics. The second is that the parallel portion of the program tends to expand faster than the serial part, eg for matrix multiplication the initialization scales linearly with the matrix size while the multiplication itself scales as $O(n^3)$. The former means that it is closely related to weak scaling. So in a way it says that the execution time remains constant rather than the amount of data. More precise it says that the expected speedup with p threads and F fraction of the code that is parallel is\cite{gustafson1988reevaluating, cuda_best_practice}
+Gustafson's Law is closely related to Amdahl's Law and can in some ways be more accurate than Amdahl's Law. Gustafson's Law makes similar assumptions as Amdahl's Law however it also makes two additional statements. It states that problems tends to expand when provided with more computational power, eg increased precision by reducing grid size, high frame rate for graphics. The second is that the parallel portion of the program tends to expand faster than the serial part, eg for matrix multiplication the initialization scales linearly with the matrix size while the multiplication itself scales as $O(n^3)$. The former means that it is closely related to weak scaling. So in a way it says that the execution time remains constant rather than the amount of data. More precise it says that the expected speed up with p threads and F fraction of the code that is parallel is\cite{gustafson1988reevaluating, cuda_best_practice}
 $$S(p)=p+(1-F)(1-p)$$
 
 \begin{figure}[h]
@@ -509,7 +552,7 @@ Symmetric confidence interval of additive effects.
 
 \chapter{Results}
 %Results (up till 15 pages including plots)
-%  - Performance measurements (scalability, speedup and efficiency as well as load balancing)
+%  - Performance measurements (scalability, speed up and efficiency as well as load balancing)
 %  - Setup(simulation setup, compilers and hardware setup)
 %  - Single node performance
 %  - multy-node performance
@@ -524,6 +567,29 @@ Symmetric confidence interval of additive effects.
 %Outlook (up to one page)
 
 \chapter{Appendix}
+\section{A Variables}
+\begin{description}
+%anything with hat is estimate
+  \item[OR]
+	Odds ratio
+	\item[$RR_{ij}$]
+	Relative risk with exposure i j?
+	\item[X]
+	Predictors
+	\item[Y]
+	The outcome, binary variable
+	\item[$\pi(x)$]
+	P(Y=1)
+\end{description}
+
+\section{B Abbrivations}
+\begin{description}
+  \item[MAF] \hfill \\
+	Minor allele frequency, the frequency of the least common allele.
+	\item[RF] \hfill \\
+	Random Forest
+\end{description}
+
 %List of figs
 %List of tables
 
